--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<p>Hello, I am a server.</p>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Chat server</title>
+  </head>
+  <body>
+    <p>Hello, I am a server.</p>
+  </body>
+</html>
